--- a/app/src/main/res/layout/activity_evento.xml
+++ b/app/src/main/res/layout/activity_evento.xml
@@ -12,7 +12,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="20dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
         <TextView
             android:layout_width="wrap_content"
@@ -42,6 +44,7 @@
                 android:layout_alignEnd="@+id/txt_titulo">
 
                 <EditText
+                    android:id="@+id/edt_titulo"
                     android:layout_width="250dp"
                     android:layout_height="wrap_content"
                     android:hint="Escribir el titulo"/>
@@ -64,6 +67,7 @@
             android:layout_marginTop="10dp">
 
             <EditText
+                android:id="@+id/edt_descripcion"
                 android:layout_width="350dp"
                 android:layout_height="wrap_content"
                 android:hint="Escribir su Descripcion dle evento"/>
